NEWS for package xlsx

Changes in version 0.4.2 (released 2012-xx-xx)

 o TODO: fix the namedRanges to use the readColumns function


Changes in version 0.4.1 (released 2012-01-22)

 o Added a test for file existence in loadWorkbook.  If file does not
   exist, the error message from read.xlsx, read.xlsx2 and
   loadWorkbook is now more informative.  Also added path expansion in
   file names. (Suggested by Dirk Eddelbuettel.)

 o Fixed bug in addDataFrame to allow it to add a df to existing
   sheets, not only to new sheets. 


Changes in version 0.4.0 (released 2012-01-15)

 o BACWARDS INCOMPATIBLE CHANGES!  A complete rewrite of functionality
   to deal with cell styles.  Although I want to minimize API breaking
   changes, I belive that these changes are for the better as the old
   function createCellStyle had a whopping 11 arguments and was still
   incomplete.  The new functionality defines an S3 object CellStyle
   on which you can "add" DataFormat, Font, Fill, Border, Alignment,
   Protection.  On the note of backward compatibility, I don't want to
   promise anything as the package is still young.  As more people
   starts using the package, the API will freeze and if breaking
   changes are contemplated, a clear deprecation path will be
   provided.  

 o A Google project has been created http://code.google.com/p/rexcel/
   to expose the development branch of the package and manage the
   social interaction.  Please report all issues through this venue.
   Also a Google groups http://groups.google.com/group/R-package-xlsx
   has been created for announcements, etc.  Do register if you are
   interested in the development of the package.  It may give me more
   impetus to resolve an issue if I know many people are using this
   package. 

 o New function addHyperlink to add hyperlinks (urls, emails) to
   a cell.

 o New function addDataFrame to add a data.frame to an existing
   sheet.  It alows the user to style the header, rownames, or